--- a/index.html
+++ b/index.html
@@ -6,200 +6,66 @@
   <title>Генератор QR-кодов</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
-
+    *, *::before, *::after { box-sizing: border-box; }
     body {
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
       font-family: 'Inter', sans-serif;
       background: linear-gradient(135deg, #89f7fe 0%, #66a6ff 100%);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      min-height: 100vh; display: flex; justify-content: center; align-items: center;
       color: #222;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
+      -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
     }
-
     .container {
-      background: rgba(255, 255, 255, 0.95);
-      box-shadow:
-        0 10px 25px rgba(102, 166, 255, 0.2),
-        0 4px 15px rgba(102, 166, 255, 0.15);
-      border-radius: 20px;
-      padding: 40px 50px;
-      max-width: 480px;
-      width: 100%;
-      text-align: center;
-      transition: box-shadow 0.3s ease;
+      background: rgba(255,255,255,0.95);
+      box-shadow: 0 10px 25px rgba(102,166,255,0.2), 0 4px 15px rgba(102,166,255,0.15);
+      border-radius: 20px; padding: 40px 50px; max-width: 480px; width: 100%;
+      text-align: center; transition: box-shadow 0.3s ease;
     }
-
     .container:hover {
-      box-shadow:
-        0 15px 40px rgba(102, 166, 255, 0.35),
-        0 7px 30px rgba(102, 166, 255, 0.3);
+      box-shadow: 0 15px 40px rgba(102,166,255,0.35), 0 7px 30px rgba(102,166,255,0.3);
     }
-
-    h1 {
-      margin-bottom: 30px;
-      font-weight: 700;
-      font-size: 32px;
-      color: #334e68;
-      letter-spacing: 0.03em;
-    }
-
-    label {
-      display: block;
-      text-align: left;
-      margin-bottom: 10px;
-      font-weight: 600;
-      font-size: 15px;
-      color: #334e68;
-      user-select: none;
-    }
-
+    h1 { margin-bottom: 30px; font-weight: 700; font-size: 32px; color: #334e68; letter-spacing: 0.03em; }
+    label { display: block; text-align: left; margin-bottom: 10px; font-weight: 600; font-size: 15px; color: #334e68; user-select: none; }
     input[type="text"], input[type="color"], select {
-      width: 100%;
-      padding: 14px 18px;
-      border-radius: 14px;
-      border: 2px solid #cbd5e1;
-      font-size: 16px;
-      font-weight: 500;
-      color: #334e68;
-      background: #f9fafb;
-      outline-offset: 2px;
-      transition:
-        border-color 0.3s ease,
-        background-color 0.3s ease;
-      box-shadow: inset 0 1px 3px rgba(0,0,0,0.07);
-      margin-bottom: 25px;
+      width: 100%; padding: 14px 18px; border-radius: 14px; border: 2px solid #cbd5e1;
+      font-size: 16px; font-weight: 500; color: #334e68; background: #f9fafb; outline-offset: 2px;
+      transition: border-color 0.3s ease, background-color 0.3s ease;
+      box-shadow: inset 0 1px 3px rgba(0,0,0,0.07); margin-bottom: 25px;
     }
-
-    input[type="text"]:focus,
-    input[type="color"]:focus,
-    select:focus {
-      border-color: #3b82f6;
-      background-color: #ffffff;
-      box-shadow: 0 0 8px rgba(59, 130, 246, 0.3);
+    input[type="text"]:focus, input[type="color"]:focus, select:focus {
+      border-color: #3b82f6; background-color: #fff; box-shadow: 0 0 8px rgba(59,130,246,0.3);
     }
-
-    .color-group, .size-group {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 32px;
-      justify-content: space-between;
-    }
-
-    .color-input, .size-input {
-      flex: 1;
-    }
-
+    .color-group, .size-group { display: flex; gap: 20px; margin-bottom: 32px; justify-content: space-between; }
+    .color-input, .size-input { flex: 1; }
     button {
-      background: linear-gradient(90deg, #3b82f6, #2563eb);
-      border: none;
-      border-radius: 16px;
-      color: white;
-      font-weight: 700;
-      font-size: 18px;
-      padding: 16px 0;
-      cursor: pointer;
-      width: 100%;
-      box-shadow: 0 8px 20px rgba(37, 99, 235, 0.4);
-      transition:
-        background 0.35s ease,
-        box-shadow 0.35s ease;
-      user-select: none;
+      background: linear-gradient(90deg, #3b82f6, #2563eb); border: none; border-radius: 16px; color: white;
+      font-weight: 700; font-size: 18px; padding: 16px 0; cursor: pointer; width: 100%;
+      box-shadow: 0 8px 20px rgba(37,99,235,0.4);
+      transition: background 0.35s ease, box-shadow 0.35s ease; user-select: none;
     }
-
-    button:disabled {
-      background: #a5b4fc;
-      box-shadow: none;
-      cursor: not-allowed;
-      color: #d1d5db;
-    }
-
+    button:disabled { background: #a5b4fc; box-shadow: none; cursor: not-allowed; color: #d1d5db; }
     button:hover:not(:disabled) {
-      background: linear-gradient(90deg, #2563eb, #1e40af);
-      box-shadow: 0 12px 25px rgba(30, 64, 175, 0.6);
+      background: linear-gradient(90deg, #2563eb, #1e40af); box-shadow: 0 12px 25px rgba(30,64,175,0.6);
     }
-
-    #qrCode {
-      margin-top: 36px;
-      display: flex;
-      justify-content: center;
-    }
-
+    #qrCode { margin-top: 36px; display: flex; justify-content: center; }
     canvas {
       border-radius: 20px;
-      box-shadow:
-        0 12px 25px rgba(0, 0, 0, 0.15);
-      max-width: 100%;
-      height: auto;
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
+      max-width: 100%; height: auto;
     }
-
-    .button-group {
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-      margin-top: 28px;
-    }
-
-    footer {
-      margin-top: 36px;
-      font-size: 13px;
-      color: #64748b;
-      user-select: none;
-      font-weight: 500;
-    }
-
-    /* Модальное окно */
+    .button-group { display: flex; flex-direction: column; gap: 14px; margin-top: 28px; }
+    footer { margin-top: 36px; font-size: 13px; color: #64748b; user-select: none; font-weight: 500; }
     .modal-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.45);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
+      position: fixed; inset: 0; background: rgba(0,0,0,0.45); display: none; justify-content: center; align-items: center; z-index: 1000;
     }
-
-    .modal-overlay.active {
-      display: flex;
-    }
-
+    .modal-overlay.active { display: flex; }
     .modal {
-      background: white;
-      border-radius: 16px;
-      padding: 30px 40px;
-      box-shadow: 0 12px 35px rgba(0,0,0,0.25);
-      max-width: 320px;
-      width: 90%;
-      text-align: center;
+      background: white; border-radius: 16px; padding: 30px 40px;
+      box-shadow: 0 12px 35px rgba(0,0,0,0.25); max-width: 320px; width: 90%; text-align: center;
     }
-
-    .modal h2 {
-      margin-top: 0;
-      margin-bottom: 24px;
-      font-weight: 700;
-      font-size: 22px;
-      color: #334e68;
-    }
-
-    .modal button {
-      margin-top: 12px;
-      padding: 14px 0;
-      font-size: 18px;
-      border-radius: 14px;
-      width: 100%;
-    }
-
-    .modal button + button {
-      margin-top: 14px;
-    }
+    .modal h2 { margin-top: 0; margin-bottom: 24px; font-weight: 700; font-size: 22px; color: #334e68; }
+    .modal button { margin-top: 12px; padding: 14px 0; font-size: 18px; border-radius: 14px; width: 100%; }
+    .modal button + button { margin-top: 14px; }
   </style>
 </head>
 <body>
@@ -244,7 +110,6 @@
   <footer>© 2025 Генератор QR-кодов</footer>
 </div>
 
-<!-- Модальное окно выбора -->
 <div class="modal-overlay" id="modalOverlay" role="dialog" aria-modal="true" aria-labelledby="modalTitle" aria-describedby="modalDesc">
   <div class="modal">
     <h2 id="modalTitle">Выберите формат скачивания</h2>
@@ -326,41 +191,38 @@
     }
     closeModalBtn.addEventListener('click', closeModal);
 
-    // Скачать PNG
+    // Скачать PNG (с использованием dataURL)
     downloadPngBtn.addEventListener('click', () => {
       const canvas = qrCodeContainer.querySelector('canvas');
-      if (!canvas) return;
-
-      canvas.toBlob(blob => {
-        if (!blob) return;
-        const url = URL.createObjectURL(blob);
-        const link = document.createElement('a');
-        link.href = url;
-        link.download = 'qr-code.png';
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-        URL.revokeObjectURL(url);
-      }, 'image/png');
+      if (!canvas) {
+        alert('Сначала сгенерируйте QR-код!');
+        return;
+      }
+      const url = canvas.toDataURL('image/png');
+      const link = document.createElement('a');
+      link.href = url;
+      link.download = 'qr-code.png';
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
       closeModal();
     });
 
     // Скачать PDF
     downloadPdfBtn.addEventListener('click', async () => {
       const canvas = qrCodeContainer.querySelector('canvas');
-      if (!canvas) return;
-
+      if (!canvas) {
+        alert('Сначала сгенерируйте QR-код!');
+        return;
+      }
       const { jsPDF } = window.jspdf;
       const pdf = new jsPDF({
         unit: 'px',
         format: [canvas.width, canvas.height]
       });
-
-      // Добавим изображение из канваса в pdf
       const dataUrl = canvas.toDataURL('image/png');
       pdf.addImage(dataUrl, 'PNG', 0, 0, canvas.width, canvas.height);
       pdf.save('qr-code.pdf');
-
       closeModal();
     });
 
@@ -377,6 +239,5 @@
     });
   })();
 </script>
-
 </body>
 </html>
