--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
       background: linear-gradient(90deg, #2563eb, #1e40af); box-shadow: 0 12px 25px rgba(30,64,175,0.6);
     }
     #qrCode { margin-top: 36px; display: flex; justify-content: center; }
-    canvas {
+    img.qr-img {
       border-radius: 20px;
       box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
       max-width: 100%; height: auto;
+      cursor: pointer;
+      background: #fff;
     }
     .button-group { display: flex; flex-direction: column; gap: 14px; margin-top: 28px; }
     footer { margin-top: 36px; font-size: 13px; color: #64748b; user-select: none; font-weight: 500; }
@@ -62,6 +64,7 @@
     .modal {
       background: white; border-radius: 16px; padding: 30px 40px;
       box-shadow: 0 12px 35px rgba(0,0,0,0.25); max-width: 320px; width: 90%; text-align: center;
+      position: relative;
     }
     .modal h2 { margin-top: 0; margin-bottom: 24px; font-weight: 700; font-size: 22px; color: #334e68; }
     .modal button { margin-top: 12px; padding: 14px 0; font-size: 18px; border-radius: 14px; width: 100%; }
@@ -122,7 +125,7 @@
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
-  (function () {
+  document.addEventListener('DOMContentLoaded', function () {
     const textInput = document.getElementById('textInput');
     const fgColor = document.getElementById('fgColor');
     const bgColor = document.getElementById('bgColor');
@@ -166,7 +169,14 @@
         const canvas = document.createElement('canvas');
         await QRCode.toCanvas(canvas, text, opts);
 
-        qrCodeContainer.appendChild(canvas);
+        // Создаём <img> для отображения (и возможности сохранить через долгий тап)
+        const dataUrl = canvas.toDataURL('image/png');
+        const img = document.createElement('img');
+        img.src = dataUrl;
+        img.alt = 'QR-код';
+        img.className = 'qr-img';
+
+        qrCodeContainer.appendChild(img);
         downloadBtn.style.display = 'inline-block';
 
       } catch (err) {
@@ -191,14 +201,14 @@
     }
     closeModalBtn.addEventListener('click', closeModal);
 
-    // Скачать PNG (с использованием dataURL)
+    // Скачать PNG (через dataURL)
     downloadPngBtn.addEventListener('click', () => {
-      const canvas = qrCodeContainer.querySelector('canvas');
-      if (!canvas) {
+      const img = qrCodeContainer.querySelector('img');
+      if (!img) {
         alert('Сначала сгенерируйте QR-код!');
         return;
       }
-      const url = canvas.toDataURL('image/png');
+      const url = img.src;
       const link = document.createElement('a');
       link.href = url;
       link.download = 'qr-code.png';
@@ -210,19 +220,24 @@
 
     // Скачать PDF
     downloadPdfBtn.addEventListener('click', async () => {
-      const canvas = qrCodeContainer.querySelector('canvas');
-      if (!canvas) {
+      const img = qrCodeContainer.querySelector('img');
+      if (!img) {
         alert('Сначала сгенерируйте QR-код!');
         return;
       }
       const { jsPDF } = window.jspdf;
-      const pdf = new jsPDF({
-        unit: 'px',
-        format: [canvas.width, canvas.height]
-      });
-      const dataUrl = canvas.toDataURL('image/png');
-      pdf.addImage(dataUrl, 'PNG', 0, 0, canvas.width, canvas.height);
-      pdf.save('qr-code.pdf');
+      const image = new window.Image();
+      image.src = img.src;
+      image.onload = function() {
+        const width = image.width;
+        const height = image.height;
+        const pdf = new jsPDF({
+          unit: 'px',
+          format: [width, height]
+        });
+        pdf.addImage(img.src, 'PNG', 0, 0, width, height);
+        pdf.save('qr-code.pdf');
+      };
       closeModal();
     });
 
@@ -231,13 +246,13 @@
       if (e.target === modalOverlay) closeModal();
     });
 
-    // Закрыть модал по ESC
+    // Закрыть модал по Esc
     window.addEventListener('keydown', (e) => {
       if (e.key === 'Escape' && modalOverlay.classList.contains('active')) {
         closeModal();
       }
     });
-  })();
+  });
 </script>
 </body>
 </html>
